RESOLVED FIXED205171
Fix missing exception check in JSON Stringifier's gap function.
https://bugs.webkit.org/show_bug.cgi?id=205171
Summary Fix missing exception check in JSON Stringifier's gap function.
Mark Lam
Reported 2019-12-12 10:40:53 PST
Attachments
proposed patch. (2.47 KB, patch)
2019-12-12 10:44 PST, Mark Lam
no flags
Mark Lam
Comment 1 2019-12-12 10:44:43 PST
Created attachment 385514 [details] proposed patch.
Yusuke Suzuki
Comment 2 2019-12-12 10:46:58 PST
Comment on attachment 385514 [details] proposed patch. r=me
WebKit Commit Bot
Comment 3 2019-12-12 11:19:38 PST
Comment on attachment 385514 [details] proposed patch. Clearing flags on attachment: 385514 Committed r253441: <https://trac.webkit.org/changeset/253441>
WebKit Commit Bot
Comment 4 2019-12-12 11:19:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.