Fix missing exception check in JSON Stringifier's gap function. https://bugs.webkit.org/show_bug.cgi?id=205171 <rdar://problem/57871842>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/missing-exception-check-in-json-stringifier-gap.js: Added.

Source/JavaScriptCore:

* runtime/JSONObject.cpp:
(JSC::gap):


Canonical link: https://commits.webkit.org/218367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253441 268f45cc-cd09-0410-ab3c-d52691b4dbfc